[tool.poetry]
name = "leolivestreaming"
version = "0.1.0"
description = ""
authors = ["clarkzjw <clarkzjw@uvic.ca>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.8.2"
numpy = "^1.26.2"
pytz = "^2023.3.post1"
pymongo = "^4.6.1"
selenium = "^4.16.0"
docker = "^7.0.0"
schedule = "^1.2.2"
pandas = "^2.2.3"
motor = "^3.6.0"
quart = "^0.19.6"
quart-cors = "^0.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
